# panso.se

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scrapy.cfg  wrangler.toml
.github/workflows/: docker-build-and-push.yml  docker-publish.yaml
Docker/: PansoPostgres.Dockerfile  compose.yaml  conf.sql
clutter/: settings.py
clutter/spiders/: webhallen.py
config/: asgi.py  settings.py  urls.py  wsgi.py
config/tests/: test_views.py
docs/: windows.md
inet/: apps.py  models.py
inet/migrations/: 0001_initial.py
panso/: README.md  apps.py  asgi.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
panso/migrations/: 0001_initial.py  0002_remove_webhallenjson_status_and_more.py  0003_remove_webhallenjson_product_id_not_negative_and_more.py
panso/tests/: test_env.py  test_views.py
panso/views/: panso.py
templates/: base.html  home.html  index.html
templates/webhallen/: product.html  products.html
utils/: field_updater.py
webhallen/: admin.py  apps.py  models.py  urls.py  views.py
webhallen/management/commands/: convert_json_to_model.py  create_singular_json.py  json_products.py  save_json_to_disk.py  webhallen_aggregate_json_keys.py  webhallen_fetch_json.py  webhallen_import_json.py  webhallen_populate.py  webhallen_save_json_to_disk.py
webhallen/migrations/: 0001_initial.py  0002_alter_webhallenproductjson_data.py  0002_avatar_averagerating_canonicalvariant_categories_and_more.py  0002_remove_webhallenproduct_image_url_and_more.py
webhallen/models/: __init__.py  products.old  products.py  scraped.py  sitemaps.py
webhallen/tests/: test_models_scraped.py  test_views.py
